--- a/ApplicationInsightsConsoleApp/ApplicationInsightsConsoleApp.csproj
+++ b/ApplicationInsightsConsoleApp/ApplicationInsightsConsoleApp.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.21.0" />
   </ItemGroup>
 
   <ItemGroup>
